Project beauty_ecommerce_report {
  database_type: "PostgreSQL"
  Note: "Simplified ERD for report, based on BE/prisma/schema.prisma. It keeps only the core e-commerce entities."
}

Enum order_status {
  pending
  confirmed
  processing
  shipped
  delivered
  cancelled
  refunded
}

Enum payment_status {
  unpaid
  paid
  failed
  refunded
  pending
}

Enum shipment_status {
  pending
  packing
  in_transit
  delivered
  failed
  returned
}

Enum product_moderation_status {
  pending
  approved
  rejected
  removed
}

Table role {
  id int [pk, increment]
  name varchar [unique, not null]
}

Table users {
  id int [pk, increment]
  email varchar [unique, not null]
  password_hash varchar
  full_name varchar
  avatar_url varchar
  phone varchar
  role_id int
  is_active boolean [not null, default: true]
  is_deleted boolean [not null, default: false]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table addresses {
  id int [pk, increment]
  user_id int [not null]
  recipient varchar [not null]
  phone varchar [not null]
  province varchar [not null]
  district varchar [not null]
  ward varchar [not null]
  street varchar [not null]
  is_default boolean [not null, default: false]
  created_at datetime [not null]
}

Table shops {
  id int [pk, increment]
  owner_id int [unique, not null]
  name varchar [not null]
  slug varchar [unique, not null]
  logo_url varchar
  phone varchar
  email varchar
  is_verified boolean [not null, default: false]
  commission_rate decimal [not null, default: 0.03]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table brands {
  id int [pk, increment]
  name varchar [unique, not null]
  slug varchar [unique, not null]
  logo_url varchar
  created_at datetime [not null]
}

Table categories {
  id int [pk, increment]
  parent_id int
  name varchar [not null]
  slug varchar [unique, not null]
  created_at datetime [not null]
}

Table products {
  id int [pk, increment]
  shop_id int [not null]
  brand_id int
  name varchar [not null]
  slug varchar [unique, not null]
  description varchar
  moderation_status product_moderation_status [not null, default: "pending"]
  is_published boolean [not null, default: false]
  avg_rating decimal [default: 0]
  review_count int [not null, default: 0]
  view_count int [not null, default: 0]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table product_categories {
  product_id int [not null]
  category_id int [not null]

  indexes {
    (product_id, category_id) [pk]
  }
}

Table product_variants {
  id int [pk, increment]
  product_id int [not null]
  sku varchar [unique, not null]
  name varchar
  shade_hex varchar
  size_label varchar
  price decimal [not null]
  compare_at_price decimal
  stock int [not null, default: 0]
  is_active boolean [not null, default: true]
}

Table carts {
  id int [pk, increment]
  user_id int [unique, not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table cart_items {
  id int [pk, increment]
  cart_id int [not null]
  product_id int [not null]
  variant_id int
  quantity int [not null, default: 1]
  price_snapshot decimal [not null]

  indexes {
    (cart_id, product_id, variant_id) [unique]
  }
}

Table orders {
  id int [pk, increment]
  user_id int [not null]
  shop_id int [not null]
  shipping_address_id int
  status order_status [not null, default: "pending"]
  payment_status payment_status [not null, default: "unpaid"]
  subtotal_amount decimal [not null, default: 0]
  discount_amount decimal [not null, default: 0]
  shipping_fee decimal [not null, default: 0]
  total_amount decimal [not null, default: 0]
  note varchar
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table order_items {
  id int [pk, increment]
  order_id int [not null]
  product_id int [not null]
  variant_id int
  name_snapshot varchar
  variant_snapshot varchar
  unit_price decimal [not null]
  quantity int [not null]
  line_total decimal [not null]
}

Table payments {
  id int [pk, increment]
  order_id int [not null]
  provider varchar
  amount decimal [not null]
  status payment_status [not null, default: "pending"]
  transaction_id varchar
  created_at datetime [not null]
}

Table shipments {
  id int [pk, increment]
  order_id int [not null]
  status shipment_status [not null, default: "pending"]
  carrier varchar
  tracking_number varchar
  shipped_at datetime
  delivered_at datetime
  created_at datetime [not null]
}

Table reviews {
  id int [pk, increment]
  user_id int [not null]
  product_id int [not null]
  rating int [not null]
  title varchar
  content varchar
  is_verified_purchase boolean [not null, default: false]
  created_at datetime [not null]

  indexes {
    (user_id, product_id) [unique]
  }
}

Ref: users.role_id > role.id
Ref: addresses.user_id > users.id

Ref: shops.owner_id > users.id

Ref: categories.parent_id > categories.id
Ref: products.shop_id > shops.id
Ref: products.brand_id > brands.id
Ref: product_categories.product_id > products.id
Ref: product_categories.category_id > categories.id
Ref: product_variants.product_id > products.id

Ref: carts.user_id > users.id
Ref: cart_items.cart_id > carts.id
Ref: cart_items.product_id > products.id
Ref: cart_items.variant_id > product_variants.id

Ref: orders.user_id > users.id
Ref: orders.shop_id > shops.id
Ref: orders.shipping_address_id > addresses.id
Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
Ref: order_items.variant_id > product_variants.id

Ref: payments.order_id > orders.id
Ref: shipments.order_id > orders.id

Ref: reviews.user_id > users.id
Ref: reviews.product_id > products.id
